2022-03-16  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Refactor some position information hit-testing logic related to data detectors in Live Text
        https://bugs.webkit.org/show_bug.cgi?id=237927

        Reviewed by Tim Horton.

        Pull the call to `dataDetectorImageOverlayPositionInformation()` out from `elementPositionInformation()`, and
        into the top level in `WebPage::positionInformation()`. Since `dataDetectorImageOverlayPositionInformation` only
        depends on the hit-tested inner node (rather than the element responding to click events), it doesn't make sense
        to only populate the data detector results array only when we find an element that responds to clicks.

        Test: fast/images/text-recognition/ios/show-data-detector-context-menu.html

        * WebProcess/WebPage/ios/WebPageIOS.mm:
        (WebKit::elementPositionInformation):
        (WebKit::WebPage::positionInformation):

2022-03-16  Youenn Fablet  <youenn@apple.com>

        Make MIMETypeRegistry::mimeTypeForPath take a StringView
        https://bugs.webkit.org/show_bug.cgi?id=236441
        <rdar://problem/89084526>

        Reviewed by Chris Dumez.

        * UIProcess/API/Cocoa/APIAttachmentCocoa.mm:
        (API::mimeTypeInferredFromFileExtension):
        (API::Attachment::setFileWrapperAndUpdateContentType):
        * UIProcess/Inspector/mac/WKInspectorResourceURLSchemeHandler.mm:
        (-[WKInspectorResourceURLSchemeHandler webView:startURLSchemeTask:]):
        * UIProcess/ios/forms/WKFileUploadPanel.mm:
        (-[WKFileUploadPanel presentWithParameters:resultListener:]):

2022-03-16  Youenn Fablet  <youenn@apple.com>

        redirectCount returns 0 when using a Service Worker
        https://bugs.webkit.org/show_bug.cgi?id=235710
        <rdar://problem/88432190>

        Reviewed by Chris Dumez.

        Pass an optional NetworkLoadMetrics when sending the response to web process.