@@ -1,3 +1,15 @@
+2022-03-16  Per Arne Vollan  <pvollan@apple.com>
+
+        Incorrect header name used in __has_include
+        https://bugs.webkit.org/show_bug.cgi?id=237914
+        <rdar://90271228>
+
+        Reviewed by Geoffrey Garen.
+
+        * Configurations/WebKit.xcconfig:
+        * UIProcess/Cocoa/WebProcessPoolCocoa.mm:
+        (WebKit::WebProcessPool::platformInitializeWebProcess):
+
 2022-03-16  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [iOS] Refactor some position information hit-testing logic related to data detectors in Live Text
